fixed adaptability on mobile

--- a/src/components/Favorites/Favorites.module.scss
+++ b/src/components/Favorites/Favorites.module.scss
@@ -8,6 +8,12 @@
     min-height: 50vh;
   }
 
+
+  @media(max-width: 830px) {
+    .favorites__products{
+      justify-content:center;
+    }
+  }
 .title__block{
     display: flex;
     background-color: rgb(252, 252, 252);
