--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -62,4 +62,11 @@
       border-radius: 0 0 20px 20px;
     min-height: 50vh;
     }
+
+    @media(max-width: 830px) {
+      main{
+        justify-content:center;
+      }
+    }
+    
     
